[package]
name = "ipfs_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.10.1"
log = "0.4.20"
simple_logger = "4.2.0"
actix-web = "4"
crossbeam-queue = "0.3.8"
chashmap = "2.2.2"
reqwest = { version = "0.11.22", features = ["gzip", "blocking"] }
scraper = "0.18.0"
threadpool = "1.8"