[package]
name = "ipfs_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.11.1"
log = "0.4.21"
simple_logger = "4.3.3"
actix-web = "4"
crossbeam-queue = "0.3.11"
reqwest = { version = "0.12.4", features = ["gzip", "blocking"] }
scraper = "0.19.0"
threadpool = "1.8.1"
dashmap = "5.5.3"