[package]
name = "ipfs_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.11.1"
log = "0.4.21"
simple_logger = "5.0.0"
actix-web = "4"
crossbeam-queue = "0.3.11"
reqwest = { version = "0.12.4", features = ["gzip", "blocking"] }
scraper = "0.25.0"
threadpool = "1.8"
dashmap = "6.0.0"